--- a/lessons/lesson-1/style.css
+++ b/lessons/lesson-1/style.css
@@ -8,15 +8,17 @@ body {
     flex-direction: column;
 }
 
-.salary {
+.input {
     display: inline-block;
     font-size: 16px;
     padding: 10px;
     box-sizing: border-box;
     margin: 10px 0;
+    border-radius: 8px;
+    border: 1px solid rgba(0,0,0,0.35);
 }
 
-.switcher {
+.select {
     display: inline-block;
     font-size: 16px;
     padding: 10px;
@@ -28,6 +30,14 @@ body {
     background-repeat: no-repeat;
     background-size: 34px;
     background-position: right;
+    border-radius: 8px;
+    border: 1px solid rgba(0,0,0,0.35);
+}
+
+.input:focus, .select:focus {
+    outline: none;
+    box-shadow: 0 0 0 3px rgba(74, 159, 255, 0.35);
+    transition: all .2s ease;
 }
 
 .result {
