--- a/src/variables/theme.scss
+++ b/src/variables/theme.scss
@@ -2685,8 +2685,8 @@
 .p-card {
   background: #ffffff;
   color: #333333;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  border-radius: 3px;
+  box-shadow: 0 1px 9px rgba(0, 0, 0, 0.10), 0 1px 4px rgba(0, 0, 0, 0.14);
+  border-radius: 9px;
 }
 .p-card .p-card-body {
   padding: 1rem;
@@ -4208,6 +4208,7 @@
   min-width: 1.5rem;
   height: 1.5rem;
   line-height: 1.5rem;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 .p-badge.p-badge-secondary {
   background-color: #607D8B;
@@ -4246,10 +4247,26 @@
   background: #007ad9;
   color: #ffffff;
   font-size: 0.75rem;
-  font-weight: 700;
+  font-weight: 500;
   padding: 0.25rem 0.4rem;
   border-radius: 3px;
+  display: inline-flex;
+  align-items: center;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
+.p-tag.p-tag-lg {
+  font-size: 1.125rem;
+  min-width: 2.25rem;
+  height: 2.25rem;
+  line-height: 2.25rem;
+}
+.p-tag.p-tag-xl {
+  font-size: 1.5rem;
+  min-width: 3rem;
+  height: 3rem;
+  line-height: 3rem;
+}
+
 .p-tag.p-tag-success {
   background-color: #34A835;
   color: #ffffff;
