--- a/lessons/page/main.css
+++ b/lessons/page/main.css
@@ -1,5 +1,7 @@
 body {
     overflow-x: hidden;
+    width:100%;
+    height:100%;
 }
 
 #app {
@@ -9,10 +11,22 @@ body {
     padding: 90px 0;
     margin: 0 -120px;
     min-height: 5000px;
+    align-items:center;
+}
+
+img {
+    min-width: 200px;
+    max-width: 200px;
+    width: 200px;
+    height: auto;
 }
 
 .light {
     margin: -60px -80px;
+    width: 200px;
+}
+.light2 {
+    margin: -60px 0px;
     width: 200px;
 }
 
@@ -23,5 +37,10 @@ body {
 
 .gray {
     margin: 0px -60px -150px;
+    width: 200px;
+}
+
+.new {
+    margin: 80px 0 -230px -30px;
     width: 200px;
 }
