--- a/lessons/app/main.css
+++ b/lessons/app/main.css
@@ -5,13 +5,12 @@
 }
 
 .app-description {
-
+    font-size: 20px;
 }
 
 .form-field {
     margin: 20px 0;
     display: flex;
-    align-items: baseline;
 }
 
 .form-field__description {
@@ -21,11 +20,13 @@
 .input {
     font-size: 18px;
     padding: 10px;
+    border-radius: 0.5ch;
 }
 
 .button {
     font-size: 18px;
     padding: 10px;
+    border-radius: 0.5ch;
 }
 .result {
     font-size: 18px;
