--- a/lessons/navigation/sidebar.css
+++ b/lessons/navigation/sidebar.css
@@ -380,6 +380,10 @@ body {
     background-image: url(./assets/settings.svg);
 }
 
+.icon_bell {
+    background-image: url(./assets/bell.svg);
+}
+
 .icon_dots {
     background-image: url(./assets/dots.svg);
     background-size: 100%;
@@ -423,7 +427,7 @@ body {
     background-color: rgba(255,255,255,1);
     box-shadow: 0 5px 12px rgba(0,0,0,0.2);
     padding: 16px 0;
-    width: 200px;
+    width: 250px;
     transform: translateY(10px);
     transition: all .2s;
 }
