--- a/lessons/navigation/page.css
+++ b/lessons/navigation/page.css
@@ -16,7 +16,7 @@
     border-bottom: rgba(0,0,0,0.1) solid 1px;
     align-items: center;
     box-sizing: border-box;
-    padding: 0 16px;
+    padding: 0 16px 0 24px;
     display: flex;
     justify-content: space-between;
 }
