--- a/lessons/navigation/cards.css
+++ b/lessons/navigation/cards.css
@@ -121,6 +121,10 @@
     background-image: url(assets/Frame4.svg);
 }
 
+.ill_5 {
+    background-image: url(assets/Frame5.svg);
+}
+
 .badge {
     border-radius: 4px;
     background-color: #51C15C;
