--- a/lessons/app/main2.css
+++ b/lessons/app/main2.css
@@ -16,6 +16,7 @@
     margin: 20px 5%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .form-field__description {
